Sup and sub script

--- a/01-index.html
+++ b/01-index.html
@@ -6,8 +6,9 @@
     <title>Restart.</title>
   </head>
   <body>
+    <h1>HTML elements</h1>
+    <hr />
     <!-- All about lists -->
-    <h1>List demo</h1>
     <h2>Unordered list</h2>
     <ul>
       <li>HTML</li>
@@ -20,6 +21,7 @@
       <li>Node.js</li>
       <li>React.js</li>
     </ol>
+    <hr />
     <!-- Hyperlinks -->
     <h2>Links</h2>
     <p>
@@ -29,11 +31,25 @@
         >Link to the course</a
       >🧑🏽‍💻🧑🏽‍💻
     </p>
+    <hr />
     <!-- Images -->
     <h2>Images</h2>
     <img
       src="https://img-b.udemycdn.com/course/750x422/625204_436a_3.jpg"
       alt="The Web Developer Bootcamp"
     />
+    <hr />
+    <!-- Block vs Inline -->
+    <h2>Block (div) vs Inline (span) elements</h2>
+    <div>
+      <p>I am a BLOCK element</p>
+    </div>
+    <span> I am INLINE element. </span>
+    <span> I am 2nd INLINE element. </span>
+    <hr />
+    <!-- Super and Sub script elements -->
+    <h2>Super and Sub script</h2>
+    <p>Super<sup>script</sup></p>
+    <p>Sub<sub>script</sub></p>
   </body>
 </html>
