--- a/01-index.html
+++ b/01-index.html
@@ -94,8 +94,45 @@
         <p>Super<sup>script</sup></p>
         <p>Sub<sub>script</sub></p>
       </section>
+      <hr />
+      <!-- Tables -->
+      <section data-testid="tables">
+        <h2>Tables</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>S. No.</th>
+              <th>Tech</th>
+              <th>Required</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>HTML</td>
+              <td>Yes</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>CSS</td>
+              <td>Yes</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>JS</td>
+              <td>Yes</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>React</td>
+              <td>Yes</td>
+            </tr>
+          </tbody>
+          <tfoot></tfoot>
+        </table>
+      </section>
+      <hr />
     </main>
-    <hr />
     <footer>
       <p>This is me learning web-development (footer)</p>
     </footer>
