--- a/01-index.html
+++ b/01-index.html
@@ -132,6 +132,53 @@
         </table>
       </section>
       <hr />
+      <section data-testid="forms">
+        <h2>Forms</h2>
+        <form action="/webdev" method="post">
+          <div>
+            <label for="username">Username:</label>
+            <input
+              id="username"
+              name="username"
+              type="text"
+              placeholder="Enter username"
+            />
+          </div>
+          <br />
+          <div>
+            <label for="password">Password:</label>
+            <input
+              id="password"
+              name="password"
+              type="password"
+              placeholder="Your password"
+            />
+          </div>
+          <br />
+          <div>
+            <label for="color">Choose your color:</label>
+            <input id="color" name="color" type="color" placeholder="Color" />
+          </div>
+          <br />
+          <div>
+            <label for="age">Enter you age:</label>
+            <input id="age" name="age" type="number" placeholder="Age" />
+          </div>
+          <br />
+          <div>
+            <label for="time">Time:</label>
+            <input id="time" name="time" type="time" placeholder="Time" />
+          </div>
+          <br />
+          <div>
+            <label for="date">Select date and time:</label>
+            <input id="date" name="date" type="date" placeholder="Date" />
+          </div>
+          <br />
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+      <hr />
     </main>
     <footer>
       <p>This is me learning web-development (footer)</p>
